--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Seungsoo Choi",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "graphql-yoga": "^1.18.3"
   },
   "devDependencies": {
